# VST3-HelloWorld-Rust

./: Cargo.toml  README.md  build.rs  gitignore
Resources/: index.html  main.css  moduleinfo.json  ui.js
scripts/: install-win.ps1  mac-bundle.sh  win-bundle.ps1
src/: controller.rs  lib.rs  processor.rs  shared.rs  util.rs  view.rs
