
[package]
name = "vst3_skeleton_db_vertical_meters_tooltips"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
vst3 = "0.3"
wry = "0.39"
windows = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Com"
] }
webview2-com = "0.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
